--- a/style/style.css
+++ b/style/style.css
@@ -119,10 +119,13 @@ main > section#site > p{
     text-align: center;
     font-family: var(--font2);
     padding-top: 1em;
+    transition: 0.4s;
+    text-shadow: 0px 0px 7px rgba(0, 0, 0, 0.49);
 }
 
 main > section#site > p:hover{
     color: black;
+    text-shadow: 0px 0px 7px rgba(255, 255, 255, 0.49);
 }
 
 main > section#site > a{
