--- a/style/style.css
+++ b/style/style.css
@@ -15,18 +15,19 @@
     --cor5: #EBB023;
     --cor6: black;
     --cor7: white;
+    --cor8: linear-gradient(to bottom, var(--cor1), var(--cor2), var(--cor3));
     --font1: 'Bungee Shade', cursive;
     --font2: 'Noto Serif Tamil', serif;
     --font3: 'Roboto Slab', serif;
 }
 
 body{
-    background-image: linear-gradient(to bottom, var(--cor1), var(--cor2), var(--cor3));
+    background-image: var(--cor8);
 }
 
 
 header{
-    background-image: linear-gradient(to bottom, var(--cor1), var(--cor2), var(--cor3));
+    background-image: var(--cor8);
     text-align: center;
 }
 
@@ -69,7 +70,7 @@ header > section{
     padding: 15px;
     text-align: left;
     display: block;
-    box-shadow: -1px 3px 3px rgba(0, 0, 0, 0.42);
+    box-shadow: 0px 0px 11px 1px rgba(0, 0, 0, 0.42);
 }
 
 header > section a{
@@ -99,6 +100,7 @@ main{
     text-align: justify;
     background-color: white;
     box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.411);
+    border-radius: 10px;
 } 
 
 main > section p{
@@ -147,7 +149,9 @@ main > section#site > a{
 }
 
 footer{
+    display: block;
     background-color: var(--cor1);
+    box-shadow: 0px -1px 9px 0px rgba(0, 0, 0, 0.404);
     color: white;
     text-align: center;
     font-size: 1.3em;
