--- a/style/style.css
+++ b/style/style.css
@@ -42,6 +42,7 @@ header > h1{
 
 header > h1:hover{
     color: white;
+    text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.575);
 }
 
 header > h3{
@@ -62,7 +63,7 @@ header a {
 header a:hover {
     color: white;
     text-decoration: underline;
-    
+    text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.575);
 }
 
 header > section{
